# rusty-commit-saver

./: .changelogrc.json  .codecov.yml  .env  .gitignore  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  NOTES.md  README.md  SECURITY.md  Session.vim  bacon.toml  crates.js  deny.toml  devenv.nix  devenv.yaml  flake.nix  help.html  index.html  rust-toolchain.toml  rusty-commit-saver.ini  search-index.js  settings.html  shell.nix  src-files.js  treefmt.toml  vim_commit_session.vim
.config/: nextest.toml
.direnv/: nix-profile-24.05-61502m9h1jl40j7s  nix-profile-24.05-61502m9h1jl40j7s.rc
.github/workflows/: 1-quality-checks.yml  2-coverage.yml  3-release.yml  4-documentation.yml  build.yml  ci-cd.yml  ci.yml  codeql.yml  deny.yml  docs.yml  nix-flake-update.yml  pr-title.yml  release.yml  run-tests.yml  security-audit.yml
docs/evolution/: vim-commit-coverage-evolution.md
docs/product/: jobs.yaml  vision.md
rusty_commit_saver/: all.html  fn.run_commit_saver.html  index.html  sidebar-items.js
rusty_commit_saver/config/: fn.get_default_ini_path.html  fn.get_ini_file.html  fn.get_or_default_config_ini_path.html  fn.parse_ini_content.html  fn.retrieve_config_file_path.html  fn.set_proper_home_dir.html  index.html  sidebar-items.js  struct.GlobalVars.html  struct.UserInput.html
rusty_commit_saver/vim_commit/: fn.check_diary_path_exists.html  fn.create_diary_file.html  fn.create_directories_for_new_entry.html  fn.get_parent_from_full_path.html  index.html  sidebar-items.js  (+2 more)
src/: config.rs  git_repository.rs  lib.rs  main.rs  vim_commit.rs
tests/: integration_tests.rs
(+33 files in other folders)
