[dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
dirs = "6.0.0"
git2 = "0.20.2"
log = "0.4.28"
markup = "0.15.0"
once_cell = "1.21.3"
configparser = "3.1.0"
clap = {version = "4.5.53", features = ["derive", "env", "string"]}
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.23"
chrono = {version = "0.4.42", features = ["serde"]}

[lib]
doctest = false

[package]
name = "rusty-commit-saver"
version = "4.7.0"
edition = "2021"
authors = ["chess7th"]
