[dependencies]
chrono = {version = "0.4.43", features = ["serde"]}
dirs = "6.0.0"
git2 = "0.20.4"
log = "0.4.29"
markup = "0.16.0"
once_cell = "1.21.3"
configparser = "3.1.0"
clap = {version = "4.5.57", features = ["derive", "env", "string"]}
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.25.0"
chrono = {version = "0.4.43", features = ["serde"]}

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)']}

[package]
name = "rusty-commit-saver"
version = "4.14.1"
edition = "2021"
authors = ["chess7th"]
license = "MIT"
